03_Pod-nginx-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx-with-pvc
spec:
  volumes:
    - name: pv-volume-for-pod
      persistentVolumeClaim:
        claimName: nginx-hostpath-volumeclaim
  containers:
    - name: pod-nginx-with-pvc
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-volume-for-pod
