05_nginx-service-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-statefulset
  labels:
    app: nginx-service-statefulset
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx-statefulset
