06_nginx-ingress-statefulset.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-statefulset
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /statefulset
            backend:
              serviceName: nginx-service-statefulset
              servicePort: 80
